<resources>
    <string name="app_name">Telegram</string>
    <string name="settings_default_username">Liza</string>
    <string name="settings_status">online</string>
    <string name="settings_account_sector">Account</string>
    <string name="settings_phone_number_btn_change">+38095793658</string>
    <string name="settings_label_change_phone_number">Tap to change phone number</string>
    <string name="settings_default_username_btn">lizoknovakova</string>
    <string name="settings_label_username">Username</string>
    <string name="settings_bio_btn">Bio</string>
    <string name="settings_label_bio">Add a few words about yourself</string>
    <string name="settings_menu_change_name">Change name</string>
    <string name="settings_menu_exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_enter_the_code">Enter the code</string>
    <string name="register_text_message_we_sent">We sent SMS on your phone with code</string>
    <string name="register_code_hint">_ _ _ _ _ _</string>
    <string name="register_message_to_enter_number">Enter your phone number</string>
    <string name="register_text_your_phone">Your phone number</string>
    <string name="hint_write_your_phone_number">Write your phone number</string>

</resources>